protocols/tests/brave_new_world/bit_truncation/bit_truncation_sha_bug.out
error: The two expressions did not evaluate to the same value (in transaction `bit_truncation_sha(4398046511104, 68719476736)`)
  ┌─ brave_new_world/bit_truncation/bit_truncation_sha.prot:9:15
  │
9 │     assert_eq(data_out, dut.left);
  │               ^^^^^^^^^^^^^^^^^^ LHS Value: 68719476736, RHS Value: 0

Trace 0 execution failed.
